Fix sticky header on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -25,9 +25,14 @@ body {
 header.scrolled {
   position: fixed;
   top: 0;
-  width: 900px;
+  width: 100%;
+  max-width: 920px;
+  margin: 0 -10px;
   height: var(--header-scrolled-height);
-  background-color: inherit; }
+  background-color: inherit;
+  /* background: rgb(85,170,238); */
+  /* background: linear-gradient(0deg, rgba(85,170,238,1) 0%, rgba(124,190,242,1) 7%, rgba(183,219,248,1) 20%, rgba(232,243,253,1) 30%, rgba(255,255,255,1) 100%); */
+}
 
 header.scrolled .web-presence li {
   display: inline;
